[package]
name = "rupring"
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "Rupring" 
keywords = ["server", "spring", "framework", "rupring"] 
readme = "./../README.md"
repository = "https://github.com/myyrakle/rupring" 
documentation = "https://docs.rs/rupring/latest/rupring" 
homepage = "https://github.com/myyrakle/rupring/blob/master/README.md" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rupring_macro={ version="0.8.2", path="../rupring_macro" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5.0"
serde = { version="1.0.193", features=["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
log = "0.4.20"
anyhow = "1.0.86"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
