[package]
name = "rupring_macro"
version = "0.11.1"
edition = "2021"
description = "rupring macro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro=true

[lints]
workspace = true